# HXforge

./: .gitignore  Cargo.toml  Changelog.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
hxforge/: main.py  math_utils.py
hxforge/fluids/: fluid_props.py
hxforge/gui/: layout.py
hxforge/physics/: htc.py
rust_hx/: fluids.py  hx_geom.py  materials.py
rust_hx/gui/: gui.py
src/: lib.rs
test/: test_htc.py  test_math_utils.py  test_rust_interface.py
